Fixed deprecated reference

--- a/src/hubspot-client.csproj
+++ b/src/hubspot-client.csproj
@@ -44,4 +44,8 @@
   <PropertyGroup Condition="'$(APPVEYOR)' == 'True'">
     <ContinuousIntegrationBuild>true</ContinuousIntegrationBuild>
   </PropertyGroup>
+
+  <ItemGroup>
+    <FrameworkReference Include="Microsoft.AspNetCore.App" />
+  </ItemGroup>
 </Project>
